Added ferrous sulphate
Added ferrous sulphate

--- a/dosing.html
+++ b/dosing.html
@@ -62,6 +62,7 @@
    <option value="Loratadine">Loratadine 1mg/1mL (age/weight based)</option>
    <option value="Macrogol">Macrogol 13.12g/sachet (0.5-1.5g/kg)</option>
    <option value="Prednisolone">Prednisolone 5mg/1mL (1-2mg/kg)</option>
+   <option value="Ferrous_sulphate">Ferrous sulphate 30mg/1mL (0.5-1mg/kg)</option>
  </optgroup>
 
 
