--- a/dosing.html
+++ b/dosing.html
@@ -44,8 +44,8 @@
    <option value="Amoxicillin125">Amoxicillin 125mg/5mL (15-30mg/kg)</option>
    <option value="Amoxicillin250">Amoxicillin 250mg/5mL (15-30mg/kg)</option>
    <option value="Cefaclor125">Cefaclor 125mg/5mL (10mg/kg)</option>
-   <option value="Cefalexin125">Cefalexin 125mg/5mL (12.5mg/kg)</option>
-   <option value="Cefalexin250">Cefalexin 250mg/5mL (12.5mg/kg)</option>
+   <option value="Cefalexin125multi">Cefalexin 125mg/5mL (12.5-25mg/kg)</option>
+   <option value="Cefalexin250multi">Cefalexin 250mg/5mL (12.5-25 mg/kg)</option>
    <option value="Coamoxiclav125-31.25">Coamoxiclav 125-31.25mg/5mL (15mg/kg)</option>
    <option value="Coamoxiclav250-62.5">Coamoxiclav 250-62.5mg/5mL (15mg/kg)</option>
    <option value="Cotrimoxazole480">Cotrimoxazole 240mg/5mL (24mg/kg)</option>
